--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+./basic-ecommerce/appsettings.json
+./basic-ecommerce/appsettings.Development.json
