take away OpenAPI for Railway and bring back Swagger.

--- a/.gitignore
+++ b/.gitignore
@@ -362,5 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-./basic-ecommerce/appsettings.json
-./basic-ecommerce/appsettings.Development.json
+/basic-ecommerce/appsettings.json
+/basic-ecommerce/appsettings.Development.json
